--- a/client/src/pages/courses/Payment/coursePayment.css
+++ b/client/src/pages/courses/Payment/coursePayment.css
@@ -1,4 +1,4 @@
-/* עיצוב עבור כפתורי ויזה ומאסטרקארד */
+
 .card-type-selection {
   display: flex;
   justify-content: center;
@@ -9,7 +9,7 @@
   margin-top: 90px;
 }
 .payment-page-container h1 {
-  margin-top: -20px; /* אפשר לשנות את הערך כדי למקם את הכותרת למעלה */
+  margin-top: -20px;
 }
 
 
@@ -27,11 +27,11 @@
 }
 
 .card-type-button.selected {
-  border: 2px solid #1160d6; /* כחול כהה יותר כאשר הכפתור נבחר */
+  border: 2px solid #1160d6; 
   border-radius: 8px;
 }
 
-/* הודעת שגיאה עבור כפתורי התשלום */
+
 .card-error {
   color: red;
   font-size: 0.9rem;
@@ -39,25 +39,25 @@
   text-align: center;
 }
 
-/* עיצוב קבוצת שדות טופס */
+
 .form-group {
   display: flex;
   align-items: center;
-  flex-direction: row-reverse; /* הופך את הסדר כך שה-label מימין וה-input משמאל */
+  flex-direction: row-reverse; 
   justify-content: space-between;
   margin-bottom: 15px;
 }
 
 .form-group label {
   text-align: right;
-  width: 40%; /* קביעת רוחב קבוע לתווית */
+  width: 40%; 
   font-weight: bold;
 }
 
 .form-group input,
 .form-group select {
-  width: 100%; /* רוחב מלא לשדה */
-  max-width: 250px; /* מגביל את הרוחב המרבי של השדות */
+  width: 100%; 
+  max-width: 250px; 
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -65,11 +65,11 @@
   
 }
 
-/* עיצוב כפתור הרכישה */
+
 .submit-button {
   width: 100%;
   padding: 12px;
-  background-color: #0b76ef; /* צבע כחול לכפתור */
+  background-color: #0b76ef;
   color: rgb(255, 250, 250);
   font-size: 1.1rem;
   font-weight: bold;
@@ -77,22 +77,22 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 4px 8px rgb(0, 0, 0); /* צל לכפתור */
+  box-shadow: 0 4px 8px rgb(0, 0, 0); 
 }
 
 .submit-button:hover {
-  background-color: #0056b3; /* כחול כהה יותר כשמעבירים עכבר */
-  transform: translateY(-2px); /* הזזת הכפתור למעלה בעת ריחוף */
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* צל נוסף בעת ריחוף */
+  background-color: #0056b3;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 .submit-button:active {
-  background-color: #004085; /* כחול כהה יותר בעת לחיצה */
-  transform: translateY(1px); /* הורדה קלה של הכפתור בעת לחיצה */
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); /* צל פחות חזק בעת לחיצה */
+  background-color: #004085;
+  transform: translateY(1px);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* הודעת שגיאה כללית */
+
 .error {
   color: red;
   font-size: 0.9rem;
