--- a/client/src/components/admin/courses/coursesList.css
+++ b/client/src/components/admin/courses/coursesList.css
@@ -1,4 +1,4 @@
-/* Global Styles */
+
 body, html {
   margin: 0;
   padding: 0;
@@ -8,44 +8,44 @@ body, html {
   color: #333;
 }
 
-/* Wrapper to center the CoursesList */
+
 .courses-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* גובה מינימלי של 100% למסך */
+  min-height: 100vh; 
   
 }
 
-/* Courses List Container */
+
 .courses-list {
   max-width: 1200px;
   width: 100%;
   padding: 50px;
-  background-color: #ffffff; /* רקע לבן */
+  background-color: #ffffff; 
   border-radius: 16px;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); /* צללים עדינים */
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); 
   transition: transform 0.3s, box-shadow 0.3s;
   
 }
 
 .courses-list:hover {
-  transform: translateY(-10px); /* אפקט הרמה קל */
-  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.15); /* צללים חזקים יותר ב-hover */
+  transform: translateY(-10px); 
+  box-shadow: 0 25px 60px rgba(0, 0, 0, 0.15); 
 }
 
-/* Courses Header */
+
 .courses-list h1 {
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 40px;
-  color: #000; /* כותרת בצבע שחור */
+  color: #000; 
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 
-/* Table Styles */
+
 .courses-list table {
   width: 100%;
   border-collapse: collapse;
@@ -71,14 +71,14 @@ body, html {
 }
 
 .courses-list tr:nth-child(even) {
-  background-color: #f1f5f9; /* צבע רקע שונה לשורות זוגיות */
+  background-color: #f1f5f9; 
 }
 
 .courses-list tr:hover {
-  background-color: #e3e9f0; /* אפקט hover לשורות */
+  background-color: #e3e9f0; 
 }
 
-/* Button Styles */
+
 .courses-list button {
   padding: 12px 25px;
   font-size: 1em;
@@ -92,7 +92,7 @@ body, html {
 
 }
 
-/* Delete Button - Red */
+
 .courses-list button.delete {
   background: linear-gradient(to right, #e74c3c, #c0392b);
   color: white;
@@ -108,7 +108,7 @@ body, html {
   transform: translateY(3px);
 }
 
-/* Edit Button - Gray */
+
 .courses-list button.edit {
   background: #b7b8b9;
   color: white;
@@ -125,7 +125,7 @@ body, html {
   
 }
 
-/* Error Message */
+
 .error-message {
   color: #e74c3c;
   text-align: center;
@@ -138,7 +138,7 @@ body, html {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-/* Responsive Design for Smaller Screens */
+
 @media (max-width: 768px) {
   .courses-list {
     padding: 30px;
@@ -152,12 +152,12 @@ body, html {
 .price-cell-courseList{
   direction: rtl;
   text-align: center;
-  padding-right: 5px; /* תוכל לשנות את הערך בהתאם לצורך */
+  padding-right: 5px;
 }
 
 .courses-list td .action-buttons {
   display: flex;
-  gap: 10px; /* רווח בין הכפתורים */
-  justify-content: center; /* ממרכז את הכפתורים בתא */
+  gap: 10px; 
+  justify-content: center; 
   align-items: center;
 }
