--- a/client/src/pages/homePage/edit project/EditProject.css
+++ b/client/src/pages/homePage/edit project/EditProject.css
@@ -1,6 +1,4 @@
-/* EditProject.css */
 
-/* עיצוב כולל לעמוד עריכת הפרויקט */
 .edit-project-wrapper {
   display: flex;
   justify-content: center;
@@ -46,7 +44,7 @@
   border-radius: 2px;
 }
 
-/* עיצוב טופס */
+
 .edit-project-form {
   display: flex;
   flex-direction: column;
@@ -91,9 +89,9 @@ textarea {
   min-height: 80px;
 }
 
-/* עיצוב התמונה הנוכחית */
+
 .current-image {
-  max-width: 300px; /* Set consistent max-width */
+  max-width: 300px; 
   width: 100%;
   height: auto;
   border-radius: 8px;
@@ -106,7 +104,7 @@ textarea {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
-/* עיצוב כפתור העלאת תמונה חדשה */
+
 .form-group input[type="file"] {
   font-size: 0.9em;
   color: #333;
@@ -131,7 +129,7 @@ textarea {
   background-color: #0056b3;
 }
 
-/* עיצוב כפתור שמירת שינויים */
+
 .submit-button {
   width: 100%;
   padding: 12px;
@@ -158,7 +156,7 @@ textarea {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
-/* התאמה למסכים קטנים */
+
 @media screen and (max-width: 600px) {
   .edit-project-container {
       padding: 20px;
