--- a/client/src/pages/workshops/add workshop/AddWorkshop.css
+++ b/client/src/pages/workshops/add workshop/AddWorkshop.css
@@ -1,7 +1,7 @@
-/* עיצוב הקונטיינר הכולל של הטופס */
+
 .add-workshop-container {
-  max-width: 800px; /* הגבלת רוחב לקונטיינר */
-  margin: 80px auto 50px; /* ריווח מה-navbar */
+  max-width: 800px; 
+  margin: 80px auto 50px; 
   padding: 40px;
   background-color: #ffffff;
   border-radius: 12px;
@@ -18,7 +18,7 @@
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
 }
 
-/* עיצוב כותרת הטופס */
+
 .add-workshop-container h1 {
   font-size: 2rem;
   color: #050505;
@@ -26,7 +26,7 @@
   text-align: center;
 }
 
-/* עיצוב הטופס */
+
 form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -36,18 +36,18 @@ form {
 
 @media screen and (max-width: 600px) {
   form {
-      grid-template-columns: 1fr; /* מעבר לעמודה אחת במסכים קטנים */
+      grid-template-columns: 1fr; 
   }
 }
 
-/* עיצוב קבוצת שדות */
+
 .add-workshop-container div {
   display: flex;
   flex-direction: column;
   text-align: right;
 }
 
-/* עיצוב תוויות */
+
 .add-workshop-container label {
   margin-bottom: 8px;
   font-weight: bold;
@@ -55,7 +55,7 @@ form {
   font-size: 1rem;
 }
 
-/* עיצוב שדות קלט עם כיווניות טקסט מימין לשמאל */
+
 .add-workshop-container input[type="text"],
 .add-workshop-container input[type="number"],
 .add-workshop-container input[type="date"],
@@ -69,8 +69,8 @@ form {
   font-size: 1rem;
   transition: border-color 0.3s;
   box-sizing: border-box;
-  direction: rtl; /* קביעת כיוון הכתיבה מימין לשמאל */
-  text-align: right; /* יישור הטקסט וה-placeholder לימין */
+  direction: rtl; 
+  text-align: right; 
 }
 
 .add-workshop-container input[type="text"]:focus,
@@ -81,13 +81,13 @@ form {
   outline: none;
 }
 
-/* עיצוב שדה טקסט */
+
 .add-workshop-container textarea {
   resize: vertical;
   min-height: 100px;
 }
 
-/* עיצוב הכפתור */
+
 .add-workshop-container button[type="submit"] {
   grid-column: span 2;
   padding: 12px;
@@ -98,7 +98,7 @@ form {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s;
-  width: 50%; /* הכפתור מיושר למרכז */
+  width: 50%; 
   margin: 20px auto;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
@@ -108,7 +108,7 @@ form {
   transform: translateY(-2px);
 }
 
-/* התאמה למסכים קטנים */
+
 @media screen and (max-width: 600px) {
   .add-workshop-container {
       padding: 20px;
@@ -119,7 +119,7 @@ form {
   }
 
   .add-workshop-container button[type="submit"] {
-      width: 100%; /* הכפתור מתפרס על כל הרוחב במסכים קטנים */
+      width: 100%; 
       font-size: 0.9rem;
       padding: 10px;
   }
